--- a/package.json
+++ b/package.json
@@ -44,14 +44,17 @@
     "electrode-redux-router-engine": "^2.1.8",
     "electrode-server": "^2.2.0",
     "electrode-static-paths": "^2.0.1",
+    "es6-promise": "^4.2.5",
     "good": "^8.1.1",
     "good-console": "^7.1.0",
     "inert": "^5.1.2",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.11",
     "milligram": "^1.3.0",
     "react-notify-toast": "^0.5.0",
     "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "electrode-archetype-react-app-dev": "^6.0.0"
